Add account recoveries, forgot a password page and more
